log
Thu 11 May 2023 01:46:30 AM UTC: 
 tests:  0|4
total_score: 0/70
0db74e2
Thu 11 May 2023 01:51:23 AM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|4
total_score: 0/70
2b1f3ef
Thu 11 May 2023 01:51:45 AM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|4
total_score: 0/70
4c9d690
Thu 11 May 2023 01:53:54 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:15: error: assignment to ‘int’ from ‘void *’ makes integer from pointer without a cast [-Werror=int-conversion]
   37 |     new->size = NULL;
      |               ^
cc1: all warnings being treated as errors
Compilation failed
38c1054
